# clatter

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  fuzz-all.sh  fuzz.sh  pre-commit.sh  test.sh
.github/workflows/: pr-tests.yml
examples/: basic_dual_layer.rs  basic_hybrid.rs  basic_no_getrandom.rs  basic_nq.rs  basic_pq.rs  custom_crypto.rs  psk.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: nq_handshake_payload.rs  nq_handshake_read.rs  nq_transport.rs  pq_handshake_payload.rs  pq_handshake_read.rs  pq_transport.rs
src/: bytearray.rs  cipherstate.rs  constants.rs  error.rs  handshakepattern.rs  io.rs  lib.rs  symmetricstate.rs  traits.rs  transportstate.rs
src/crypto_impl/: aes.rs  argyle_software_kyber.rs  blake2.rs  chacha.rs  mod.rs  pqclean_kyber.rs  pqclean_ml_kem.rs  random.rs  rust_crypto_kyber.rs  rust_crypto_ml_kem.rs  sha.rs  x25519.rs
src/handshakestate/: dual_layer.rs  hybrid.rs  hybrid_dual_layer.rs  mod.rs  nq.rs  pq.rs
src/io/: error.rs  mod.rs  read.rs  write.rs
src/test/: mod.rs  smoke.rs
tests/: Cargo.toml  no_getrandom_smoke.rs  smoke.rs
tests/src/: lib.rs  no_getrandom_smoke.rs  smoke.rs
vectors/: Cargo.toml  README.md  build.rs
vectors/src/: lib.rs  vectors.rs
