[package]
name = "clatter-test-vectors"
version = "0.1.0"
edition = "2021"

[dependencies]
clatter = { path = ".." }
hex = { version = "0.4.3", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"

[build-dependencies]
clatter = { path = ".." }
